[gd_scene load_steps=14 format=3 uid="uid://ct26q2u8q7f3m"]

[ext_resource type="Shader" path="res://src/tile_mirror.gdshader" id="1_ergtu"]
[ext_resource type="Texture2D" uid="uid://c51ce62nmbjb5" path="res://assets/Tiles.png" id="3_j70vk"]
[ext_resource type="Script" path="res://src/props/room.gd" id="4_qpude"]
[ext_resource type="PackedScene" uid="uid://dyst70ideebbg" path="res://src/props/door.tscn" id="5_vts0r"]
[ext_resource type="PackedScene" uid="uid://tiykwg5o8806" path="res://src/props/mirror.tscn" id="6_on6bk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rserg"]
shader = ExtResource("1_ergtu")
shader_parameter/do_reflect = true
shader_parameter/base_color = Color(0.545098, 0.607843, 0.705882, 1)
shader_parameter/shine_color = Color(0.752941, 0.796078, 0.862745, 1)
shader_parameter/shine_speed = 1.5
shader_parameter/shine_size = 0.01

[sub_resource type="NavigationPolygon" id="NavigationPolygon_470oe"]
vertices = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)])

[sub_resource type="NavigationPolygon" id="NavigationPolygon_v806k"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_im7wa"]
texture = ExtResource("3_j70vk")
0:0/0 = 0
0:0/0/terrain_set = 2
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 2
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 2
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 2
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 2
1:1/0/terrain = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_470oe")
2:1/0 = 0
2:1/0/terrain_set = 2
2:1/0/terrain = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 2
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
1:2/0 = 0
1:2/0/terrain_set = 2
1:2/0/terrain = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 2
2:2/0/terrain = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_side = 0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_v806k")

[sub_resource type="TileSet" id="TileSet_k6e46"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Walls"
terrain_set_0/terrain_0/color = Color(0.788235, 0.141176, 0.141176, 1)
terrain_set_0/terrain_1/name = "Floor"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
terrain_set_1/mode = 0
terrain_set_1/terrain_0/name = "Floor"
terrain_set_1/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
terrain_set_2/mode = 2
terrain_set_2/terrain_0/name = "Terrain 0"
terrain_set_2/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
navigation_layer_0/layers = 1
sources/3 = SubResource("TileSetAtlasSource_im7wa")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qvrmu"]
size = Vector2(326, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyft3"]
size = Vector2(200, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcqet"]
size = Vector2(200, 10)

[node name="Room" type="TileMap"]
z_index = -5
material = SubResource("ShaderMaterial_rserg")
tile_set = SubResource("TileSet_k6e46")
format = 2
layer_0/name = "Wall"
layer_0/y_sort_enabled = true
layer_1/name = "Floor"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = true
layer_1/y_sort_origin = 0
layer_1/z_index = -1
layer_1/tile_data = PackedInt32Array(393225, 65539, 2, 327689, 65539, 1, 262153, 65539, 1, 196617, 65539, 1, 131081, 65539, 1, 65545, 65539, 1, 9, 65539, 1, -65527, 65539, 1, -131063, 65539, 1, -196599, 65539, 1, -262135, 65539, 1, -327671, 65539, 1, -393207, 65539, 1, -458743, 65539, 0, 393224, 65539, 2, 327688, 65539, 1, 262152, 65539, 1, 196616, 65539, 1, 131080, 65539, 1, 65544, 65539, 1, 8, 65539, 1, -65528, 65539, 1, -131064, 65539, 1, -196600, 65539, 1, -262136, 65539, 1, -327672, 65539, 1, -393208, 65539, 1, -458744, 65539, 0, 393223, 65539, 2, 327687, 65539, 1, 262151, 65539, 1, 196615, 65539, 1, 131079, 65539, 1, 65543, 65539, 1, 7, 65539, 1, -65529, 65539, 1, -131065, 65539, 1, -196601, 65539, 1, -262137, 65539, 1, -327673, 65539, 1, -393209, 65539, 1, -458745, 65539, 0, 393222, 65539, 2, 327686, 65539, 1, 262150, 65539, 1, 196614, 65539, 1, 131078, 65539, 1, 65542, 65539, 1, 6, 65539, 1, -65530, 65539, 1, -131066, 65539, 1, -196602, 65539, 1, -262138, 65539, 1, -327674, 65539, 1, -393210, 65539, 1, -458746, 65539, 0, 393221, 65539, 2, 327685, 65539, 1, 262149, 65539, 1, 196613, 65539, 1, 131077, 65539, 1, 65541, 65539, 1, 5, 65539, 1, -65531, 65539, 1, -131067, 65539, 1, -196603, 65539, 1, -262139, 65539, 1, -327675, 65539, 1, -393211, 65539, 1, -458747, 65539, 0, 393220, 65539, 2, 327684, 65539, 1, 262148, 65539, 1, 196612, 65539, 1, 131076, 65539, 1, 65540, 65539, 1, 4, 65539, 1, -65532, 65539, 1, -131068, 65539, 1, -196604, 65539, 1, -262140, 65539, 1, -327676, 65539, 1, -393212, 65539, 1, -458748, 65539, 0, 393219, 65539, 2, 327683, 65539, 1, 262147, 65539, 1, 196611, 65539, 1, 131075, 65539, 1, 65539, 65539, 1, 3, 65539, 1, -65533, 65539, 1, -131069, 65539, 1, -196605, 65539, 1, -262141, 65539, 1, -327677, 65539, 1, -393213, 65539, 1, -458749, 65539, 0, 393218, 65539, 2, 327682, 65539, 1, 262146, 65539, 1, 196610, 65539, 1, 131074, 65539, 1, 65538, 65539, 1, 2, 65539, 1, -65534, 65539, 1, -131070, 65539, 1, -196606, 65539, 1, -262142, 65539, 1, -327678, 65539, 1, -393214, 65539, 1, -458750, 65539, 0, 393217, 65539, 2, 327681, 65539, 1, 262145, 65539, 1, 196609, 65539, 1, 131073, 65539, 1, 65537, 65539, 1, 1, 65539, 1, -65535, 65539, 1, -131071, 65539, 1, -196607, 65539, 1, -262143, 65539, 1, -327679, 65539, 1, -393215, 65539, 1, -458751, 65539, 0, 393216, 65539, 2, 327680, 65539, 1, 262144, 65539, 1, 196608, 65539, 1, 131072, 65539, 1, 65536, 65539, 1, 0, 65539, 1, -65536, 65539, 1, -131072, 65539, 1, -196608, 65539, 1, -262144, 65539, 1, -327680, 65539, 1, -393216, 65539, 1, 458751, 65539, 2, 393215, 65539, 1, 327679, 65539, 1, 262143, 65539, 1, 196607, 65539, 1, 131071, 65539, 1, 65535, 65539, 1, -1, 65539, 1, -65537, 65539, 1, -131073, 65539, 1, -196609, 65539, 1, -262145, 65539, 1, -327681, 65539, 1, 458750, 65539, 2, 393214, 65539, 1, 327678, 65539, 1, 262142, 65539, 1, 196606, 65539, 1, 131070, 65539, 1, 65534, 65539, 1, -2, 65539, 1, -65538, 65539, 1, -131074, 65539, 1, -196610, 65539, 1, -262146, 65539, 1, -327682, 65539, 1, -393218, 65539, 0, 458749, 65539, 2, 393213, 65539, 1, 327677, 65539, 1, 262141, 65539, 1, 196605, 65539, 1, 131069, 65539, 1, 65533, 65539, 1, -3, 65539, 1, -65539, 65539, 1, -131075, 65539, 1, -196611, 65539, 1, -262147, 65539, 1, -327683, 65539, 1, -393219, 65539, 0, 458748, 65539, 2, 393212, 65539, 1, 327676, 65539, 1, 262140, 65539, 1, 196604, 65539, 1, 131068, 65539, 1, 65532, 65539, 1, -4, 65539, 1, -65540, 65539, 1, -131076, 65539, 1, -196612, 65539, 1, -262148, 65539, 1, -327684, 65539, 1, -393220, 65539, 0, 458747, 65539, 2, 393211, 65539, 1, 327675, 65539, 1, 262139, 65539, 1, 196603, 65539, 1, 131067, 65539, 1, 65531, 65539, 1, -5, 65539, 1, -65541, 65539, 1, -131077, 65539, 1, -196613, 65539, 1, -262149, 65539, 1, -327685, 65539, 1, -393221, 65539, 0, 458746, 65539, 2, 393210, 65539, 1, 327674, 65539, 1, 262138, 65539, 1, 196602, 65539, 1, 131066, 65539, 1, 65530, 65539, 1, -6, 65539, 1, -65542, 65539, 1, -131078, 65539, 1, -196614, 65539, 1, -262150, 65539, 1, -327686, 65539, 1, -393222, 65539, 0, 458745, 65539, 2, 393209, 65539, 1, 327673, 65539, 1, 262137, 65539, 1, 196601, 65539, 1, 131065, 65539, 1, 65529, 65539, 1, -7, 65539, 1, -65543, 65539, 1, -131079, 65539, 1, -196615, 65539, 1, -262151, 65539, 1, -327687, 65539, 1, -393223, 65539, 0, 458744, 65539, 2, 393208, 65539, 1, 327672, 65539, 1, 262136, 65539, 1, 196600, 65539, 1, 131064, 65539, 1, 65528, 65539, 1, -8, 65539, 1, -65544, 65539, 1, -131080, 65539, 1, -196616, 65539, 1, -262152, 65539, 1, -327688, 65539, 1, -393224, 65539, 0, 458743, 65539, 2, 393207, 65539, 1, 327671, 65539, 1, 262135, 65539, 1, 196599, 65539, 1, 131063, 65539, 1, 65527, 65539, 1, -9, 65539, 1, -65545, 65539, 1, -131081, 65539, 1, -196617, 65539, 1, -262153, 65539, 1, -327689, 65539, 1, -393225, 65539, 0, 458742, 65539, 2, 393206, 65539, 1, 327670, 65539, 1, 262134, 65539, 1, 196598, 65539, 1, 131062, 65539, 1, 65526, 65539, 1, -10, 65539, 1, -65546, 65539, 1, -131082, 65539, 1, -196618, 65539, 1, -262154, 65539, 1, -327690, 65539, 1, -393226, 65539, 0, 458741, 3, 2, 393205, 3, 1, 327669, 3, 1, 262133, 3, 1, 196597, 3, 1, 131061, 3, 1, 65525, 3, 1, -11, 3, 1, -65547, 3, 1, -131083, 3, 1, -196619, 3, 1, -262155, 3, 1, -327691, 3, 1, -393227, 3, 0, 393226, 131075, 2, 327690, 131075, 1, 262154, 131075, 1, 196618, 131075, 1, 131082, 131075, 1, 65546, 131075, 1, 10, 131075, 1, -65526, 131075, 1, -131062, 131075, 1, -196598, 131075, 1, -262134, 131075, 1, -327670, 131075, 1, -393206, 131075, 1, -458742, 131075, 0, -393217, 65539, 0, -458752, 65539, 0)
layer_2/name = "Obstacles"
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = true
layer_2/y_sort_origin = 0
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array()
script = ExtResource("4_qpude")

[node name="DoorN" parent="." instance=ExtResource("5_vts0r")]
position = Vector2(0, -104)

[node name="DoorS" parent="." instance=ExtResource("5_vts0r")]
position = Vector2(0, 104)
rotation = 3.14159

[node name="DoorW" parent="." instance=ExtResource("5_vts0r")]
position = Vector2(-168, 0)
rotation = -1.5708

[node name="DoorE" parent="." instance=ExtResource("5_vts0r")]
position = Vector2(168, 0)
rotation = 1.5708

[node name="MirrorN" parent="." instance=ExtResource("6_on6bk")]
position = Vector2(0, -104)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MirrorN"]
shape = SubResource("RectangleShape2D_qvrmu")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="MirrorS" parent="." instance=ExtResource("6_on6bk")]
position = Vector2(0, 104)
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="MirrorS"]
shape = SubResource("RectangleShape2D_qvrmu")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="MirrorW" parent="." instance=ExtResource("6_on6bk")]
position = Vector2(-168, 0)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="MirrorW"]
shape = SubResource("RectangleShape2D_kyft3")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="MirrorE" parent="." instance=ExtResource("6_on6bk")]
position = Vector2(168, 0)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="MirrorE"]
position = Vector2(-7.54953e-08, 0)
shape = SubResource("RectangleShape2D_pcqet")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="EnemySpawner" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="EnemySpawner" to="." method="_on_enemy_spawner_timeout"]
